src/objects/DFC_Assessment_Question__c.object
<CustomObject>
    <description>Question for dementia Friendly Community Annual Assessmeny</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this a currently active question</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_Extra_On_Option__c</fullName>
        <label>Capture Extra Only for these Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capture_Extra_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Capture Extra Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display a text field after the options to allow the user enter extra information</inlineHelpText>
        <label>Capture Extra Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates this question continues from the previous question in a group - so don&apos;t show Guidance Text</description>
        <inlineHelpText>Tick this box if this question continues from the previous question in a group - so don&apos;t show Guidance Text</inlineHelpText>
        <label>Continuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <description>Guidance in answering the question</description>
        <inlineHelpText>Enter some guidance to help the user understand the question</inlineHelpText>
        <label>Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Other is this is a checkbox question</description>
        <inlineHelpText>Allow &quot;Other&apos; if this is a select type question</inlineHelpText>
        <label>Include Other Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>The list of checkbox options the user can select</description>
        <inlineHelpText>The list of checkbox options the user can select</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Option_Label__c</fullName>
        <inlineHelpText>Enter the label for the &apos;Other&apos; option</inlineHelpText>
        <label>Other Option Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Style__c</fullName>
        <label>Question Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The text of the question</description>
        <inlineHelpText>Enter the text of the question</inlineHelpText>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_Per_Action_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Repeat this question for each selected Action Area</inlineHelpText>
        <label>Repeat Per Action Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>This controls the sort order of the question in the Assessment</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The Question title if any, e.g. &quot;Foundation criteria 1: Local Infrastructures&quot;</description>
        <inlineHelpText>Question Group Title</inlineHelpText>
        <label>Group Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DFC Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Question_Style__c</columns>
        <columns>Title__c</columns>
        <columns>Question_Text__c</columns>
        <columns>Active__c</columns>
        <columns>Include_Other__c</columns>
        <columns>Continuation__c</columns>
        <columns>Capture_Extra__c</columns>
        <columns>Other_Option_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Annual Assessment Questions</label>
    </listViews>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>